applis/whoami/kustomize/base/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-whoami
  namespace: whoami
spec:
  addPrefix:
    prefix: /whoami
