applis/whoami/kustomize/base/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`whoami.example.com`)
    middlewares:
      - name: add-whoami
    services:
      - kind: Service
        name: whoami
        port: 80
  tls:
    secretName: apps-certificate
